@@ -1,3 +1,11 @@
+2008-01-21  David A. Capello  <dacap@users.sourceforge.net>
+
+	* src/jinete/jmanager.c (jmanager_generate_messages): Focus magnet
+	works again.
+
+	* src/util/clipbrd.c (paste_from_clipboard): Fixed some problems
+	when Paste.
+
 2008-01-20  David A. Capello  <dacap@users.sourceforge.net>
 
 	* src/commands/cmd_configure_tools.c (cmd_configure_tools_execute):
